# c2rust-ffi-creator

./: .gitmodules  Makefile  README.md
.github/workflows/: build-and-verify.yml
c2rust-ffi-creator/: SKILL.md
c2rust-ffi-creator/assets/: Cargo.toml.template  ffi-Cargo.toml.template
c2rust-ffi-creator/assets/c-demo/: CMakeLists.txt
c2rust-ffi-creator/examples/: README.md
c2rust-ffi-creator/r2rust-ffi-creator/references/: workflow.md
c2rust-ffi-creator/references/: c-project-spec.md  hicc-guide.md  symbol-export.md  test-conversion.md  troubleshooting.md
c2rust-ffi-creator/scripts/: analyze_c_project.py  build_rust.sh  gen_rust_ffi.py  init_rust_project.py  verify_symbols.sh
c2rust-migration-skill/: README.md
c2rust-migration-skill/scripts/: analyze_c_project.py  generate_report.py  refactor.sh  scan_headers.py  smoke_test.sh  translate.sh
c2rust-migration-skill/templates/: abi-freeze-checklist.md  c-project-analysis.md  compatibility-validation-plan.md  phase2-change-proposal.md  spec-v1-extraction.yml
c2rust-rs/: .gitignore  Cargo.toml  build.rs
c2rust-rs/.c2rust/c/: BUILD_PLAN.md  INTERFACES.md  MODULE_DEPS.md  TEST_PLAN.md  symbols_c.txt
c2rust-rs/.c2rust/c/src/: calc.c
c2rust-rs/scripts/: build_and_test.sh
c2rust-rs/src/: ffi.rs  lib.rs
examples/c2rust-rs/: README.md
examples/c2rust-rs/src/: error.rs
examples/c2rust-rs/tests/: integration_test.rs
examples/complex-kv-store/: .gitignore  Cargo.toml  README.md  build.rs
examples/complex-kv-store/.c2rust/c/: CMakeLists.txt
examples/complex-kv-store/.c2rust/c/include/: kv.h
examples/complex-kv-store/.c2rust/c/src/: kv.c
examples/complex-kv-store/.c2rust/c/tests/: test_kv.c
examples/complex-kv-store/src/: error.rs  ffi.rs  lib.rs
examples/complex-kv-store/tests/: integration_test.rs
examples/cpp-string-utils/: Cargo.toml  build.rs
examples/cpp-string-utils/.c2rust/c/: CMakeLists.txt
examples/cpp-string-utils/.c2rust/c/include/: str_counter.h
examples/cpp-string-utils/.c2rust/c/src/: str_counter.c
examples/cpp-string-utils/.c2rust/c/tests/: test_str_counter.c
examples/cpp-string-utils/src/: ffi.rs  lib.rs
examples/cpp-string-utils/tests/: integration_test.rs
examples/simple-calc/: Cargo.toml  README.md  build.rs
examples/simple-calc/.c2rust/c/: CMakeLists.txt  calc.c  calc.h
examples/simple-calc/.c2rust/c/tests/: test_calc.c
examples/simple-calc/src/: ffi.rs  lib.rs
examples/simple-calc/tests/: integration_test.rs
r2rust-ffi-creator/: SKILL.md
r2rust-ffi-creator/assets/rust-ffi-template/: Cargo.toml
r2rust-ffi-creator/references/: hicc.md  interface_template.md  type_mapping.md
r2rust-ffi-creator/scripts/: analyze_c_project.sh  build_c.sh  copy_c_sources.sh  extract_symbols.sh  test_c.sh  test_rust.sh
skills/c2rust-migration-skill/: README.md
skills/c2rust-migration-skill/examples/: sample-report.md  sample-spec-v1.yml
skills/c2rust-migration-skill/scripts/: scan_headers.py  smoke_test.sh
skills/c2rust-migration-skill/templates/: abi-freeze-checklist.md  phase1-acceptance-criteria.md
(+46 files in other folders)
